--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Build Android APK (debug)
         run: flutter build apk --debug
 
+      - name: Build Android APK (release)
+        run: flutter build apk --release
+
       - name: Upload artifact (APK)
         uses: actions/upload-artifact@v4
         with:
