Update - apk store automatic in drive

--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -1,4 +1,4 @@
-name: Android & iOS APK/IPA Build
+name: Android & iOS APK/IPA Build + Drive Upload
 
 on:
   push:
@@ -37,11 +37,11 @@ jobs:
       - name: Create iOS IPA file
         run: |
           cd build/ios/iphoneos
-          mkdir Payload
+          mkdir -p Payload
           mv Runner.app Payload/
           zip -r app.ipa Payload
 
-      # ------------ Upload Artifacts ------------
+      # ------------ Upload Artifacts to GitHub ------------
       - name: Upload Android APKs
         uses: actions/upload-artifact@v4
         with:
@@ -55,3 +55,82 @@ jobs:
         with:
           name: ios-ipa
           path: build/ios/iphoneos/app.ipa
+
+      # ------------ Restore rclone config from secret ------------
+      - name: Restore rclone.conf
+        run: |
+          mkdir -p ~/.config/rclone
+          echo "${{ secrets.RCLONE_CONFIG_BASE64 }}" | base64 --decode > ~/.config/rclone/rclone.conf
+        shell: bash
+
+      # ------------ Upload APKs to Google Drive using rclone ------------
+      - name: Upload APKs to Google Drive
+        uses: wei/rclone@v1
+        with:
+          args: copy build/app/outputs/flutter-apk/ gdrive:/CI-CD-Builds/APK/ --create-empty-src-dirs
+
+      - name: Upload IPA to Google Drive
+        uses: wei/rclone@v1
+        with:
+          args: copy build/ios/iphoneos/app.ipa gdrive:/CI-CD-Builds/IPA/
+
+
+
+#name: Android & iOS APK/IPA Build
+#
+#on:
+#  push:
+#    branches: [ main ]
+#  pull_request:
+#    branches: [ main ]
+#
+#jobs:
+#  build:
+#    runs-on: macos-latest
+#
+#    steps:
+#      - name: Checkout repo
+#        uses: actions/checkout@v4
+#
+#      - name: Setup Flutter
+#        uses: subosito/flutter-action@v2
+#        with:
+#          flutter-version: "3.38.4"
+#          channel: "stable"
+#
+#      - name: Install dependencies
+#        run: flutter pub get
+#
+#      # ------------ ANDROID APK ------------
+#      - name: Build Android APK (debug)
+#        run: flutter build apk --debug
+#
+#      - name: Build Android APK (release)
+#        run: flutter build apk --release
+#
+#      # ------------ iOS IPA ------------
+#      - name: Build iOS (no codesign)
+#        run: flutter build ios --release --no-codesign
+#
+#      - name: Create iOS IPA file
+#        run: |
+#          cd build/ios/iphoneos
+#          mkdir Payload
+#          mv Runner.app Payload/
+#          zip -r app.ipa Payload
+#
+#      # ------------ Upload Artifacts ------------
+#      - name: Upload Android APKs
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: android-apk-files
+#          path: |
+#            build/app/outputs/flutter-apk/app-debug.apk
+#            build/app/outputs/flutter-apk/app-release.apk
+#
+#      - name: Upload iOS IPA
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: ios-ipa
+#          path: build/ios/iphoneos/app.ipa
+#
